# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: pyci.yaml
page_analyzer/: app.py  checks.py  db.py
page_analyzer/templates/: base.html  index.html  site_info.html  sites.html
